[package] 
name = "monster-rs"
description = "Monster is a symbolic execution engine for 64-bit RISC-U code"
authors = ["Alexander Lackner <monster@a.lfweb.org>", "Alexander Linz <linzalexander@gmail.com>", "Christian Mösl <christian.moesl@live.at>", "Fabian Nedoluha <monster@onders.org>", "Michael Starzinger <michael.starzinger@antforge.org>"]
documentation = "https://docs.rs/monster"
repository = "https://github.com/cksystemsgroup/monster"
homepage = "https://cksystemsgroup.github.io/monster"
license = "MIT"
categories = ["command-line-utilities", "development-tools::testing", "science", "simulation"]
keywords = ["monster", "riscv", "riscu", "symbolic-execution", "smt"]
edition = "2018"
version ="0.4.1"

[features]
default = []
z3 = ["z3-solver", "z3-sys"]
boolector = ["boolector-solver", "boolector-sys"]
true-rng = []

[lib]
name = "monster"
path = "src/lib.rs"

[[bin]]
name = "monster"
path = "src/main.rs"

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "path_exploration"
harness = false
required-features = ["z3"]

[dependencies]
byteorder = "~1.5.0"
clap = { version = "~3.2.25", features = ["cargo"] }
strum = { version = "~0.26.2", features = ["derive"] }
riscu = "~0.5"
petgraph = "~0.6.4"
rand = "~0.8.5"
modinverse = "~0.1.1"
log = "~0.4.21"
env_logger = "~0.11.3"
bytesize = "~1.3.0"
itertools = "~0.12.1"
anyhow = "~1.0.81"
thiserror = "~1.0.58"
divisors = "~0.2.1"
const_format = "~0.2.32"
lazy_static = "~1.4"
boolector-solver = { package = "boolector", version = "~0.4.3", features = ["vendor-lgl"], optional = true }
boolector-sys = { version = "~0.7.2", features = ["vendor-lgl"], optional = true }
z3-solver = { package = "z3", version = "~0.12.1", features = ["static-link-z3"], optional = true }
z3-sys = { version = "~0.8.1", features = ["static-link-z3"], optional = true }
libc = "~0.2.153"

[dev-dependencies]
utils = { path = "utils" }
rayon = "~1.10.0"
tempfile = "~3.10.1"
criterion = { version = "~0.5.1", features = ["html_reports", "cargo_bench_support", "csv_output"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
